src/test/deca/context/invalid/created/type-indefini.deca
//Description:
//    test overflow error
//
// Resultats:
//    Error: Overflow during arithmetic operation
// 
// Historique:
//    cree le 01/01/2022
{
    double x;
    x = 0.1;
}